fix navbar link spacing

--- a/src/bootstrap-gisp/less/gisp-theme/_fcc-header.less
+++ b/src/bootstrap-gisp/less/gisp-theme/_fcc-header.less
@@ -30,10 +30,6 @@
     line-height: 17px;
 }
 
-.navbar-nav > li > a {
-    padding-top: 20px;
-}
-
 .site-header {
     margin: 0;
     padding: 0;
